--- a/www/public/index.html
+++ b/www/public/index.html
@@ -58,11 +58,14 @@
 	<!-- Load js libs only when the page is loaded. -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<script src="modules/slick-carousel/slick/slick.js"></script>
 	<script src="assets/js/modernizr.custom.72241.js"></script>
 	<!-- slick <script src="modules/angular-slick/dist/slick.js"></script> -->
 	<script src="modules/slick-carousel/slick/slick.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+	<script src="modules/angular-route/angular-route.min.js"></script>
+
 	<script src="modules/angular-slick-carousel/dist/angular-slick.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-sanitize.js"></script>
@@ -99,7 +102,7 @@
 </nav>
 
 <!-- Second (About) section -->
-<section class="section" id="about" ng-controller="search"  data-ng-init="init()">
+<section class="section" id="about">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-8  col-sm-offset-2">
