Кнопки редактирования скрыл для гостей

--- a/www/public/login.html
+++ b/www/public/login.html
@@ -104,8 +104,8 @@
 								<label for="password">Пароль</label>
 								<input class="form-control" ng-model="user.password" name="password" type="password" placeholder="пароль">
 							</div>
-							<button type="submit" ng-click="login()" class="btn btn-default">Ok</button>
-							<button type="submit" ng-click="logout()" class="btn btn-primary">Отмена</button>
+							<button type="submit" ng-click="login()" class="btn btn-default">Зайти под админом</button>
+							<button type="submit" ng-click="logout()" class="btn btn-primary">Стать обычным пользователем</button>
 						</form>
 					</div>
 				</div>
