--- a/www/public/index.html
+++ b/www/public/index.html
@@ -244,7 +244,7 @@
 	<div class="container">
 
 		<h2 class="text-center title"></h2>
-		<p class="lead text-center"><a href="#" ng-click="edit(0)" class="btn btn-default" role="button">Добавить</a></p>
+		<p class="lead text-center"><a href="#" ng-click="edit(0)" ng-show="isAdmin()" class="btn btn-default" role="button">Добавить</a></p>
 
 		<div class="row">
 			<div id="list" class="col-sm-8 col-sm-offset-2 fading">
@@ -256,7 +256,8 @@
 								<div class="caption">
 									<h4 class="poem-title">{{poem.title}}</h4>
 									<p ng-bind-html="poem.description | nl2br"></p>
-									<p><a ng-click="open(poem._id)" class="btn btn-primary" role="button">Читать</a> <a href="#" ng-click="edit(poem._id)" class="btn btn-default" role="button">Редактировать</a></p>
+									<p> <a ng-click="open(poem._id)" class="btn btn-default" role="button">Читать</a>
+										<a ng-click="edit(poem._id)" ng-show="isAdmin()" class="btn btn-primary" role="button">Редактировать</a> </p>
 								</div>
 							</div>
 							</div>
