--- a/www/public/index.html
+++ b/www/public/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="{{seo.title}}" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="{{location.absUrl()}}" />
-	<meta property="og:image" content="http://aguskov.org/assets/images/body4.jpg" />
+	<meta property="og:image" content="http://aguskov.org/assets/images/poster.jpg" />
 	<meta property="og:description" content="{{seo.description}}" />
 	<meta property="og:site_name" content="A.A.Guskov" />
 
