Change seo url to pub url and fix server seo responses

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -11,10 +11,10 @@
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" value="summary">
 	<!-- Open Graph data -->
-	<meta property="og:title" content="{{seo.title}}" />
+	<meta property="og:title" content="А.A.Гуськов {{seo.title}}" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="{{location.absUrl()}}" />
-	<meta property="og:image" content="http://aguskov.org/assets/images/poster.jpg" />
+	<meta property="og:image" itemprop="image" content="{{baseUrl}}/assets/images/ag_thumb.png" />
 	<meta property="og:description" content="{{seo.description}}" />
 	<meta property="og:site_name" content="A.A.Guskov" />
 
