--- a/www/public/index.html
+++ b/www/public/index.html
@@ -106,7 +106,7 @@
 				<li><a href="#head" ng-click="selectMenu('#head')">А.Гуськов</a></li>
 				<li><a href="#search" ng-click="selectMenu('#search')">Поиск</a></li>
 				<li><a href="#all" ng-click="selectMenu('#all')">Все стихи</a></li>
-				<li><a href="#themes">Фото</a></li>
+				<li><a href="#photo" ng-click="selectMenu('#photo')">Фото</a></li>
 				<li><a href="#contact">Ссылки</a></li>
 			</ul>
 		</div>
@@ -292,26 +292,22 @@
 </section>
 
 <!-- Third (Works) section -->
-<section class="section" id="themes">
+<section class="section" id="photo">
 	<div class="container">
 	
-		<h2 class="text-center title">More Themes</h2>
-		<p class="lead text-center">
-			Huge thank you to all people who publish<br>
-			their photos at <a href="http://unsplash.com">Unsplash</a>, thank you guys!
-		</p>
+		<h2 class="text-center title">Фотографии</h2>
+		<p class="lead text-center">Надо еще насканировать</p>
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-2">
 				<div class="thumbnail">
-					<img src="assets/screenshots/sshot1.jpg" alt="">
+					<img src="assets/images/ag_thumb.png" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+						<h3>Какой это год?</h3>
+						<p>По-моему, он не сильно любил фотографироваться и утверджал , что хорошо здесь получился потому, что был "под мухой"</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4" style="display:none">
 				<div class="thumbnail">
 					<img src="assets/screenshots/sshot4.jpg" alt="">
 					<div class="caption">
@@ -321,27 +317,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-4 col-sm-offset-2">
-				<div class="thumbnail">
-					<img src="assets/screenshots/sshot5.jpg" alt="">
-					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="thumbnail">
-					<img src="assets/screenshots/sshot3.jpg" alt="">
-					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-					</div>
-				</div>
-			</div>
-
 		</div>
 
 	</div>
