Сортировка по position

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -346,6 +346,7 @@
 
 <!-- scripts -->
 <script src="assets/js/magister.js"></script>
+<script src="modules/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
 <script src="assets/js/main.js"></script>
 
 
