- Починил сохранение - Сделал сохранение через askApi

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -242,7 +242,7 @@
 	<div class="container">
 
 		<h2 class="text-center title"></h2>
-		<p class="lead text-center"><a href="#" ng-click="edit(0)" ng-show="isAdmin()" class="btn btn-default" role="button">Добавить</a></p>
+		<p class="lead text-center"><a ng-click="edit(0)" ng-show="isAdmin()" class="btn btn-default" role="button">Добавить</a></p>
 
 		<div class="row">
 			<div id="list" class="col-sm-8 col-sm-offset-2 fading">
