Исправил проверку пароля, убрал "Надо еще насканировать"

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -295,7 +295,7 @@
 	<div class="container">
 	
 		<h2 class="text-center title">Фотографии</h2>
-		<p class="lead text-center">Надо еще насканировать</p>
+		<p class="lead text-center"></p>
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-2">
 				<div class="thumbnail">
