GA change init as in help for SPA

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -5,7 +5,7 @@
 	<script>
         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
         ga('create', 'UA-126380096-1', 'auto');
-        setTimeout(function() { ga_move(document.location.href, document.title) }, 300);
+        setTimeout(function() { ga('send', 'pageview') }, 300);
 	</script>
 	<script async src='https://www.google-analytics.com/analytics.js'></script>
 	<!-- End Google Analytics -->
